--- a/app/views/events/_tab_confirmed.html.erb
+++ b/app/views/events/_tab_confirmed.html.erb
@@ -4,7 +4,7 @@
 	<li ><%= link_to "Claims", root_path(:tab => "tab_claims") %></li>
 	<li class="active"><%= link_to "Confirmed", root_path(:tab => "tab_confirmed") %></li>
 </ul>
-<% @items = get_confirmed() %>
+<% @items = current_user.get_confirmed({}) %>
 <% if @items.present? %>
     <ol class="events">
       <%= render @items %>
