--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,10 @@
         <section class="user_info">
           <%= render 'shared/user_info' %>
         </section>
-        <% @events = current_user.get_events().paginate(page: params[:page]) %>
+        <section class="getting_started">
+          <%= button_to "Get the Android App!", getting_started_path, method: :get %>
+        </section>
+          <% @events = current_user.get_events().paginate(page: params[:page]) %>
 
         <section class="event_calendar">
           <%= render 'events/week_calendar' %>
