--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,16 +1,20 @@
 <footer class="footer">
+  <div>
   <small>
-    The School Business App is developed by 
-    <a href="http://http://www.ceti.cse.ohio-state.edu/">CETI</a> 
+    The School Business App is developed by
+    <a href="http://http://www.ceti.cse.ohio-state.edu/">CETI</a>
     at the <a href="http://www.osu.edu/">Ohio State University</a>
-    in partnership with 
-    <a href="http://www.delphoscityschools.org/">Delphos City Schools</a>, and is funded by the 
+    in partnership with
+    <a href="http://www.delphoscityschools.org/">Delphos City Schools</a>, and is funded by the
     <a href="http://education.ohio.gov/Topics/Straight-A-Fund/">Straight A Grant</a>.
   </small>
-  <nav>
-    <ul>
+  </div>
+  <div>
+
+<!--     <ul>
       <li><%= link_to 'About',  about_path %></li>
       <li><%= link_to 'Contact', contact_path %></li>
-    </ul>
-  </nav>
+    </ul> -->
+
+  </div>
 </footer>
