--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,5 +1,11 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
+<div class="center">
+<p>The School-Business system is designed to be a service for educators, businesses and community
+  members to enables educators to easily find knowledgeable persons who are willing to speak to
+  classes of students.</p>
+	<%= link_to "Getting Started With Android", getting_started_path %>
+</div>
 <p>
-  Get help.
+
 </p>
