--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,9 +6,9 @@
         <section class="user_info">
           <%= render 'shared/user_info' %>
         </section>
-        <section class="getting_started">
-          <%= button_to "Get the Android App!", getting_started_path, method: :get %>
-        </section>
+        <div>
+          <a href="https://play.google.com/store/apps/details?id=com.ceti_sb.android&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"><img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" width="180" align="middle"/></a>
+        </div>
           <% @events = current_user.get_events().paginate(page: params[:page]) %>
 
         <section class="event_calendar">
@@ -38,11 +38,13 @@
     at the <a href="http://www.osu.edu/">Ohio State University</a>
     in partnership with 
     <a href="http://www.delphoscityschools.org/">Delphos City Schools</a>, and is funded by the 
-    <a href="http://education.ohio.gov/Topics/Straight-A-Fund/">Straight A Grant</a>. </p><p>We are currently in beta, and if you'd like to try the Android version of the application, find out how to 
-    <%= link_to "get started!", getting_started_path  %></p>
-      </h2>
-
+    <a href="http://education.ohio.gov/Topics/Straight-A-Fund/">Straight A Grant</a>. </p>
+        </h2>
       <%= link_to 'Sign up now!', new_user_registration_path, class: 'btn btn-lg btn-primary' %>
+      <div style="margin-top:20px;">
+        <a href="https://play.google.com/store/apps/details?id=com.ceti_sb.android&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">
+        <img alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" width="160"/></a>
+      </div>
     </div>
 
    <!-- <%= link_to image_tag('rails.png', alt: 'Rails logo'),
