--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -24,7 +24,9 @@
 
 <div id="events">
   <% @events.each do |event| %>
-    <%= render partial: "event_list", locals: {event: event} %>
+    <ol class="events">
+    <%= render partial: "event", locals: {event: event} %>
+    </ol>
   <% end %>
 </div>
 
