--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <div class="col-md-8">
     <ol class="events">
-      <%= if valid_event(@event) then render @event else render text: "invalid event" end %>
+      <%= if valid_event(@event) then render 'events/full_event' else render text: "invalid event" end %>
     </ol>
   </div>
 </div>
