Update event claim handling, search service, and header to include school index on main page, sort them by name, and to handle android claim bug"

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,8 +20,9 @@
 
         <% if user_signed_in? %>
           <% @loglinks = {'Users'              => users_path, 
-                          'Events'             => events_path }%>
-                          <!-- 'Search by Location' => locations_path,
+                          'Events'             => events_path,
+                          'Schools'            => schools_path} %>
+          <!-- 'Search by Location' => locations_path,
                           'Claims'             => claims_path} 
                           %> -->
           <% @loglinks.each do |title, lpath| %>
