Update footer and help page to fix bugs

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -2,7 +2,7 @@
   <div>
   <small>
     The School Business App is developed by
-    <a href="http://http://www.ceti.cse.ohio-state.edu/">CETI</a>
+    <a href="http://www.ceti.cse.ohio-state.edu/">CETI</a>
     at the <a href="http://www.osu.edu/">Ohio State University</a>
     in partnership with
     <a href="http://www.delphoscityschools.org/">Delphos City Schools</a>, and is funded by the
