--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,3 +1,3 @@
 <h1><%= current_user.name %></h1>
 <p class="text-center"><%= link_to 'View My Profile', current_user %></p>
-<p class="text-center"><%= pluralize(current_user.events.count, 'event') %></p>
+<p class="text-center"><%= pluralize(current_user.events.where(active: true).where('event_start > ?', Time.now).count, 'event') %></p>
