--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -20,9 +20,9 @@
 
 <%= will_paginate %>
 
-<ul class="schools">
+<ol class="schools">
   <%= render @schools %>
-</ul>
+</ol>
 
 <%= will_paginate %>
 
