Update app/views/schools/_school.html.erb to display more useful information.  Adjust css and othe rfiles to accomodate, added title to events

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -209,9 +209,8 @@ input {
 
 .schools {
   list-style: none;
-  margin: 0;
+  padding: 0;
   li {
-    overflow: auto;
     padding: 10px 0;
     border-bottom: 1px solid $gray-lighter;
   }
