--- a/app/views/schools/_school.html.erb
+++ b/app/views/schools/_school.html.erb
@@ -1,7 +1,15 @@
 <li id="<%= school.id %>">
   <div class="row" >
-    <%= link_to handle_abbr(school.school_name), school %>
-    <p>City: <%= school.loc_city %></p>
-    <p>State: <%= school.loc_state %></p>
+    <div class="col-md-12"> 
+      <h3>
+	<%= link_to handle_abbr(school.school_name), school %>
+      </h3>
+    </div>
+    <div class="col-xs-6 col-md-6">
+      <p>City: <%= school.loc_city.titlecase %></p>
+    </div>
+    <div class="col-xs-6 col-md-6">
+      <p>State: <%= abbr2state(school.loc_state) %></p>
+    </div>
   </div>
 </li>
