--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -20,18 +20,9 @@
 
 <%= will_paginate %>
 
-<ol class="schools">
-  <%= render @schools %>
-</ol>
-
+<div id="schools">
+  <ol class="schools">
+    <%= render @schools %>
+  </ol>
+</div>
 <%= will_paginate %>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-</table>
-
-<br>
