--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -189,20 +189,29 @@ input {
     color: $state-danger-text;
   }
 }
-
+/*
 .checkbox {
   margin-top: -10px;
   margin-bottom: 10px;
-  width: 130px;
+  width: auto;
+  //vertical-align: middle;
+  display: inline-block;
   span {
     margin-left: 20px;
     font-weight: normal;
   }
 }
-
-#session_remember_me {
+*/
+/*
+#user_remember_me {
   width: auto;
-  margin-left: 0;
+  margin-left: 0px;
+}
+*/
+.boolean {
+  margin-left: 20px;
+  width: auto;
+  float: left;
 }
 
 /* Schools index */
