--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -38,7 +38,7 @@
             <!-- TODO This could be improved -->
             <ul class="dropdown-menu pull-right">
               
-              <% @notifications = Notification.where(user_id: current_user.id).last(10).reverse %>
+              <% @notifications = Notification.where(user_id: current_user.id).reverse.paginate %>
               <% if @notifications.count > 0 %>
               <% @notifications.each do |x| %>
                 <li><%= link_to x.content, x.link %></li>
