Create infrastructure for infinite scrolling notifications

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -71,6 +71,15 @@ p {
   line-height: 1.7em;
 }
 
+.scrollable-menu {
+  height: auto;
+  max-height: 200px;
+  overflow-x: hidden;
+}
+
+.pagination-nav {
+  display: none;
+}
 
 /* header */
 
