--- a/app/views/layouts/_google_play.html.erb
+++ b/app/views/layouts/_google_play.html.erb
@@ -1,5 +1,7 @@
 <div style="margin-top:20px;margin-bottom:20px;">
-  <a href="https://play.google.com/store/apps/details?id=com.ceti_sb.android&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">
-    <img class="center-block" alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" width="160"/>
-  </a>
+  <div class="text-center" style="margin:auto;width:160px">
+    <a href="https://play.google.com/store/apps/details?id=com.ceti_sb.android&utm_source=global_co&utm_medium=prtnr&utm_content=Mar2515&utm_campaign=PartBadge&pcampaignid=MKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1">
+    <img style="margin-left:auto;margin-right:auto;display:block;" alt="Get it on Google Play" src="https://play.google.com/intl/en_us/badges/images/generic/en-play-badge.png" width="160"/>
+    </a>
+  </div>
 </div>
