--- a/app/views/schools/index.html.erb
+++ b/app/views/schools/index.html.erb
@@ -8,16 +8,31 @@
 <% end %>
 
 
-<%= form_tag schools_path, :method => :get do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag 'Search', :name => nil %>
-      <!--:action => 'schools_near_me',
-      :class => 'btn-primary',
-      :method => :get %>-->
-  </p>
-<% end %>
-    <%= button_to 'Near Me', 'near_me', method: :get %>
+<%= form_tag schools_path, method: :get, class: "form-inline" do %>
+  <div class="form-group">
+    <input type="text" id="search", class: "form-control" >
+  </div>
+  <div class="form-group">
+    <%= submit_tag 'Search', :name => nil, class: "btn btn-default btn-primary" %>
+  </div>
+<% end -%>
+<script>
+var x = document.getElementById("demo");
+function getLocation() {
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showPosition);
+    } else {
+        x.innerHTML = "Geolocation is not supported by this browser.";
+    }
+}
+function showPosition(position) {
+
+    x.innerHTML = "Latitude: " + position.coords.latitude + 
+    "<br>Longitude: " + position.coords.longitude; 
+}
+</script>
+
+<%= render partial: "searchbyradius" %>
 
 <% @schools = get_schools(params) %>
 
