--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -66,7 +66,7 @@
   <!-- Section: This is where actions that may be taken by the user are located -->
   <p>
   <% if (not event.is_canceled) and event.start() > Time.now %>
-    <%= render partial: "claim", locals: {event: event} %>
+    <%= render partial: "events/claim", locals: {event: event} %>
   <% end %><!-- End if for event cancellation -->
   </p>
 
