password changed mail bug fix

--- a/app/views/user_mailer/password_changed.html.erb
+++ b/app/views/user_mailer/password_changed.html.erb
@@ -1,9 +1,14 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
+  </head>
+  <body>
 <h1>Your Password Has Changed!</h1>
-
 <p>
   Hi <%= @user.name %>,</p>
-<p>
-	We wanted to let you know that your password was changed.   If this was done without your knowledge, please contact us at <%= ENV["SENDGRID_USERNAME"] %>.
-</p>
+<p>	We wanted to let you know that your password was changed.   If this was done without your knowledge, please contact us at <%= ENV["SENDGRID_USERNAME"] %>.</p>
 <p>Thanks! </p>
 <p>School Business Team</p>
+</body>
+</html>
