--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -8,9 +8,8 @@
 
 <p>Someone has requested a link to change your password. You can do this through the link below.</p>
 <!-- <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p> -->
-<!--TODO in Production uncomment the second commented <p> tag and comment the First uncommented <p> tag-->
-<p><%= link_to 'Change my password',"http://ceti-test-env.elasticbeanstalk.com//users/password/edit?reset_password_token=#{@token}" %></p>
-<!-- <p><%= link_to 'Change my password',"https://www.school2biz.com//users/password/edit?reset_password_token=#{@token}" %></p> -->
+<!-- <p><%= link_to 'Change my password',"http://ceti-test-env.elasticbeanstalk.com//users/password/edit?reset_password_token=#{@token}" %></p> -->
+<p><%= link_to 'Change my password',"https://www.school2biz.com//users/password/edit?reset_password_token=#{@token}" %></p>
 <p>If you didn't request this, please ignore this email.</p>
 <p>Your password won't change until you access the link above and create a new one.</p>
  </body>
