--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -36,9 +36,14 @@
       <a href="http://www.delphoscityschools.org/">Delphos City Schools</a>
       , and is funded by the 
       <a href="http://education.ohio.gov/Topics/Straight-A-Fund/">Straight A Grant</a>. </p>
+      <p> The App is being maintained by 
+		<a href="http://ontoborn.com/">Ontoborn Technologies LLC</a>
+		</p>
+
     </h2>
     <%= link_to 'Sign up now!', new_user_registration_path, class: 'btn btn-lg btn-primary' %>
     <%= render 'layouts/google_play' %>
+    
   </div>
 
  <!-- <%= link_to image_tag('rails.png', alt: 'Rails logo'),
