Fixing the way badge filename is being read currently

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -7,6 +7,8 @@
     in partnership with
     <a href="http://www.delphoscityschools.org/">Delphos City Schools</a>, and is funded by the
     <a href="http://education.ohio.gov/Topics/Straight-A-Fund/">Straight A Grant</a>.
+    The App is being maintained by 
+		<a href="http://ontoborn.com/">Ontoborn Technologies LLC</a>.
       <%= link_to "Our Privacy Policy", privacy_policy_path %>
   </small>
   </div>
