--- a/app/views/events/_full_event.html.erb
+++ b/app/views/events/_full_event.html.erb
@@ -18,7 +18,7 @@
 </div>
 <aside class="col-xs-4 col-sm-4">
   <% if Rails.env.production? %>
-  <%= image_tag ENV["S3_BUCKET"]+"badges/"+ Badge.find(School.find(event.loc_id).badge_id).file_name,
+  <%= image_tag ENV["S3_BUCKET"]+"badges/"+ Badge.find(School.find(event.loc_id).badge_id).get_file_Name(),
         class: "img-responsive" %>
   <% else %>
     <%= image_tag "/app/assets/images/def_school_badge_small.jpg", class: "img-responsive" %>
