--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -43,9 +43,10 @@
     </h2>
     <%= link_to 'Sign up now!', new_user_registration_path, class: 'btn btn-lg btn-primary' %>
     <%= render 'layouts/google_play' %>
+    <a  href = "https://itunes.apple.com/us/app/school-business/id1114294072?mt=8" >
+    <%= render 'layouts/apple_store' %>
+    </a>
     
   </div>
 
- <!-- <%= link_to image_tag('rails.png', alt: 'Rails logo'),
-                        'http://rubyonrails.org/' %> -->
 <% end %>
