--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -3,7 +3,7 @@
 <p>
   Hi <%= User.find(@id).name %>,</p>
 <p>
-	We're very happy to have you using our app, a product that is the collaboration of the Delphos School District and the Ohio State University.  If you did not sign up for this app, please contact us at schoolbusinessapp@gmail.com.  
+	We're very happy to have you using our app, a product that is the collaboration of the Delphos School District and the Ohio State University.  If you did not sign up for this app, please contact us at support@school2biz.com.  
 </p>
 
 <p>
